<resources>
    <string name="app_name">Contacts</string>
    <string name="btn_save_contact">Lưu Danh Bạ</string>
    <string name="btn_create_contact">Tạo Người Liên Hệ</string>
    <string name="btn_call">Gọi Điện</string>
    <string name="btn_send_message">Gửi Tin Nhắn</string>
    <string name="btn_backUpGoogleDrive">Backup Google Drive</string>
    <string name="btn_ImportGoogleDrive">"Import Google Drive"</string>

    <string name="dialog_call_or_message">Bạn Muốn Gọi Điện, Gửi Tin Nhắn ?</string>

    <string name="enter_company">Công Ty</string>
    <string name="enter_name">Họ Tên</string>
    <string name="enter_phone">Điện Thoại</string>
    <string name="enter_address">Địa Chỉ</string>
    <string name="enter_email">Email</string>
    <string name="tv_contact_name">Contact name</string>
    <string name="tv_contact_phone">Contact Phone</string>
    <string name="search">Search</string>
    <string name="dialog_delete_contact">Bạn Có Muốn Xóa Danh Bạ Này ?</string>
    <string name="yes">Đồng Ý</string>
    <string name="cancel">Hủy</string>
</resources>