<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/app_bar_search"
        android:icon="@drawable/icon_search"
        android:title="@string/search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/btn_create_contact"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/btn_save_contact"
        app:showAsAction="always" />

    <item
        android:id="@+id/btn_backup_google_drive"
        android:icon="@android:drawable/btn_star"
        android:title="@string/btn_backUpGoogleDrive"
        app:showAsAction="withText" />

    <item
        android:id="@+id/btn_import_google_drive"
        android:icon="@android:drawable/btn_star"
        android:title="@string/btn_ImportGoogleDrive"
        app:showAsAction="never" />
</menu>