<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".activity.ContactAddActivity">

    <EditText
        android:drawableLeft="@drawable/icons_user"
        android:id="@+id/edt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:hint="@string/enter_name"
        android:inputType="text"
        android:minHeight="48dp" />

    <EditText
        android:drawableLeft="@drawable/icons_company"
        android:id="@+id/edt_company"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:hint="@string/enter_company"
        android:inputType="text"
        android:minHeight="48dp" />

    <EditText
        android:drawableLeft="@drawable/icons_phone"
        android:id="@+id/edt_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:hint="@string/enter_phone"
        android:inputType="phone"
        android:minHeight="48dp" />

    <EditText
        android:drawableLeft="@drawable/icons_email"
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp" />

    <EditText
        android:drawableLeft="@drawable/icons_address"
        android:id="@+id/edt_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:hint="@string/enter_address"
        android:inputType="text"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/btn_add_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:background="@color/black"
        android:onClick="btnAddContactClick"
        android:padding="8dp"
        android:text="@string/btn_save_contact"
        android:textColor="@color/white" />
</androidx.appcompat.widget.LinearLayoutCompat>